results/SVCOMP/specgen/log-StringBuilderCapLen04-2024_03_01_03_28_28.txt
public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> new StringBuilder(arg).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> new StringBuilder(arg).capacity() == 69;
                             ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
                              ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> (\result = new StringBuilder(arg).capacity()) == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: unexpected type
    //@ ensures \result <==> (\result = new StringBuilder(arg).capacity()) == 69;
                              ^
  required: variable
  found:    value
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> (\result = new StringBuilder(arg).capacity()) == 69;
                                        ^
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Assignments are not allowed where pure expressions are expected
    //@ ensures \result <==> (\result = new StringBuilder(arg).capacity()) == 69;
                                      ^
3 errors

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
                              ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
                              ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
                              ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
                              ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
                              ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
                              ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}
/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;
                              ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;  
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}

/home/max/Documents/JMLGPT/tmp/StringBuilderCapLen04.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> (new StringBuilder(arg)).capacity() == 69;  
                              ^
1 error

public class StringBuilderCapLen04 {
    //@ requires arg != null;
 
    public static boolean f(String arg) {
        StringBuilder buffer = new StringBuilder(arg);
        return buffer.capacity() == 69;
    }
}


